Configure web environment to be more testable

--- a/web/package.json
+++ b/web/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.9.1",
     "react": "15.4.1",
     "react-dom": "15.4.1",
+    "react-addons-test-utils": "15.4.1",
     "react-helmet": "3.2.2",
     "react-intl": "2.1.5",
     "react-redux": "4.4.6",
@@ -27,8 +28,10 @@
     "babel-preset-react": "6.16.0",
     "babel-preset-stage-0": "^6.16.0",
     "css-loader": "^0.23.1",
+    "enzyme": "^2.8.2",
     "expect": "^1.14.0",
     "jquery": "^2.2.1",
+    "json-loader": "^0.5.4",
     "karma": "^0.13.22",
     "karma-chrome-launcher": "^0.2.2",
     "karma-mocha": "^0.2.2",
