--- a/web/package.json
+++ b/web/package.json
@@ -29,6 +29,8 @@
     "babel-preset-stage-0": "^6.16.0",
     "css-loader": "^0.23.1",
     "enzyme": "^2.8.2",
+    "eslint": "^3.19.0",
+    "eslint-config-google": "^0.7.1",
     "expect": "^1.14.0",
     "jquery": "^2.2.1",
     "json-loader": "^0.5.4",
